--- a/views/events/screeningEventSeries/index.ejs
+++ b/views/events/screeningEventSeries/index.ejs
@@ -135,8 +135,7 @@ Aa-3
                                     </td>
                                     <td name="id">
                                         <a target="_blank" href="/events/screeningEventSeries/$id$/update">
-                                            編集
-                                            <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
+                                            <i class="material-icons" style="font-size: 1.2em;">edit</i>
                                         </a>
                                     </td>
                                 </tr>
