--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -129,8 +129,7 @@ Aa-10
                                     </td>
                                     <td name="id">
                                         <a target="_blank" href="/creativeWorks/movie/$id$/update">
-                                            編集
-                                            <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
+                                            <i class="material-icons" style="font-size: 1.2em;">edit</i>
                                         </a>
                                     </td>
                                 </tr>
