--- a/views/offerCatalogs/_dataTables.ejs
+++ b/views/offerCatalogs/_dataTables.ejs
@@ -80,8 +80,7 @@
                             </td>
                             <td name="id">
                                 <a target="_blank" href="/offerCatalogs/$id$/update">
-                                    編集
-                                    <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
+                                    <i class="material-icons" style="font-size: 1.2em;">edit</i>
                                 </a>
                             </td>
                         </tr>
