--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,8 +210,8 @@ body {
 .select2 {
   margin-top: .4375rem; }
 
-.nav-pills.nav-pills-primary .nav-item .nav-link.active, .nav-pills.nav-pills-primary .nav-item .nav-link.active:focus, .nav-pills.nav-pills-primary .nav-item .nav-link.active:hover {
-  background-color: #9c27b0; }
+.nav-pills.nav-pills-dark .nav-item .nav-link.active, .nav-pills.nav-pills-dark .nav-item .nav-link.active:focus, .nav-pills.nav-pills-dark .nav-item .nav-link.active:hover {
+  background-color: #999; }
 
 .scheduler {
   margin: 0 auto;
