--- a/public/scss/_common.scss
+++ b/public/scss/_common.scss
@@ -221,11 +221,6 @@ body {
 .card {
     margin-top: 0;
 }
-.card {
-    .material-datatables {
-        // margin-top: 1rem;
-    }
-}
 .input-group-text {
     font-size: inherit;
 }
@@ -235,6 +230,6 @@ body {
 .select2 {
     margin-top: .4375rem;
 }
-.nav-pills.nav-pills-primary .nav-item .nav-link.active, .nav-pills.nav-pills-primary .nav-item .nav-link.active:focus, .nav-pills.nav-pills-primary .nav-item .nav-link.active:hover {
-    background-color: #9c27b0;
+.nav-pills.nav-pills-dark .nav-item .nav-link.active, .nav-pills.nav-pills-dark .nav-item .nav-link.active:focus, .nav-pills.nav-pills-dark .nav-item .nav-link.active:hover {
+    background-color: #999;
 }
