--- a/views/accountTitles/accountTitleCategory/edit.ejs
+++ b/views/accountTitles/accountTitleCategory/edit.ejs
@@ -5,25 +5,12 @@ AT-08
 <%- contentFor('styles') %>
 
 <%- contentFor('scripts') %>
+<script src="/js/master/accountTitles/accountTitleCategory/form.js"></script>
 
 <%- contentFor('body') %>
-<% /* フォーム */ %>
 <form method="post">
     <%- include('../../common/errorMessage') %>
     <%- include('../../common/successMessage') %>
 
-    <% /* 登録・更新共通部 */ %>
     <%- include('form', { forms: forms, isNew: false }) %>
 </form>
-
-<script>
-    $(function () {
-        $('.btn-ok').on('click', function () {
-            $('form').submit();
-        });
-        // datepickerセット
-        $('.datepicker').datepicker({
-            language: 'ja'
-        })
-    });
-</script>
