--- a/views/common/errorMessage.ejs
+++ b/views/common/errorMessage.ejs
@@ -1,9 +1,15 @@
 <% if (message !== '') { %>
-<div class="alert alert-danger alert-dismissible fade show" role="alert">
-    <h4 class="alert-heading lead font-weight-bold mb-2"><i class="icon fa fa-exclamation-triangle"></i> Warning!</h4>
-    <p><%= message %></p>
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
-</div>
+<script>
+    $.notify({
+        // options
+        message: '<%= message %>'
+    }, {
+        // settings
+        type: 'danger',
+        placement: {
+            from: 'top',
+            align: 'right'
+        },
+    });
+</script>
 <% } %>
