--- a/views/reservations/_dataTables.ejs
+++ b/views/reservations/_dataTables.ejs
@@ -271,7 +271,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr id="templateRow" _id="$id$">
+                        <tr id="templateRow" data-id="$id$">
                             <td name="id__checkbox">
                                 <div class="form-check">
                                     <label class="form-check-label">
@@ -289,7 +289,8 @@
                             <td name="bookingTime|date:YY-MM-DD HH:mm:ss">
                                 $bookingTime$
                             </td>
-                            <td name="reservationStatusTypeName">$reservationStatusTypeName$</td>
+                            <td class="reservationStatusTypeName" name="reservationStatusTypeName">
+                                $reservationStatusTypeName$</td>
                             <td name="reservationFor.id__reservationFor.startDate|date:YY-MM-DD HH:mm">
                                 $reservationFor.id$<br>
                                 $reservationFor.startDate$
