--- a/views/offerCatalogs/add.ejs
+++ b/views/offerCatalogs/add.ejs
@@ -10,8 +10,7 @@ OC-00
 
 <%- contentFor('body') %>
 <form method="post" id="ticketTypeGroupsForm">
-    <%- include('../common/errorMessage') %>
-    <%- include('../common/successMessage') %>
+    <%- include('../common/messages') %>
 
     <%- include('form', { forms: forms, isNew: true }) %>
 </form>
