--- a/views/accountTitles/accountTitleSet/edit.ejs
+++ b/views/accountTitles/accountTitleSet/edit.ejs
@@ -9,8 +9,7 @@ AT-05
 
 <%- contentFor('body') %>
 <form method="post">
-    <%- include('../../common/errorMessage') %>
-    <%- include('../../common/successMessage') %>
+    <%- include('../../common/messages') %>
 
     <%- include('form', { forms: forms, isNew: false }) %>
 </form>
