--- a/views/categoryCodes/new.ejs
+++ b/views/categoryCodes/new.ejs
@@ -9,8 +9,7 @@ CC-01
 
 <%- contentFor('body') %>
 <form method="post">
-    <%- include('../common/errorMessage') %>
-    <%- include('../common/successMessage') %>
+    <%- include('../common/messages') %>
 
     <%- include('form', { forms: forms, isNew: true }) %>
 </form>
