--- a/views/creativeWorks/movie/add.ejs
+++ b/views/creativeWorks/movie/add.ejs
@@ -9,8 +9,7 @@ Aa-9
 
 <%- contentFor('body') %>
 <form method="post">
-    <%- include('../../common/errorMessage') %>
-    <%- include('../../common/successMessage') %>
+    <%- include('../../common/messages') %>
 
     <%- include('form', { forms: forms, isNew: true }) %>
 </form>
