--- a/views/events/screeningEventSeries/add.ejs
+++ b/views/events/screeningEventSeries/add.ejs
@@ -9,8 +9,7 @@ Aa-2
 
 <%- contentFor('body') %>
 <form method="post" id="movie_product">
-    <%- include('../../common/errorMessage') %>
-    <%- include('../../common/successMessage') %>
+    <%- include('../../common/messages') %>
 
     <%- include('form', { forms: forms }) %>
 </form>
