--- a/views/offers/add.ejs
+++ b/views/offers/add.ejs
@@ -11,8 +11,7 @@ OF-00
 
 <%- contentFor('body') %>
 <form method="post">
-    <%- include('../common/errorMessage') %>
-    <%- include('../common/successMessage') %>
+    <%- include('../common/messages') %>
 
     <%- include('form', { forms: forms, isNew: true }) %>
 </form>
