--- a/views/places/movieTheater/new.ejs
+++ b/views/places/movieTheater/new.ejs
@@ -8,8 +8,7 @@ MT-00
 <script src="/js/master/places/movieTheater.js"></script>
 <%- contentFor('body') %>
 <form method="post">
-    <%- include('../../common/errorMessage') %>
-    <%- include('../../common/successMessage') %>
+    <%- include('../../common/messages') %>
 
     <%- include('form', { forms: forms, isNew: true }) %>
 </form>
