--- a/views/places/seat/update.ejs
+++ b/views/places/seat/update.ejs
@@ -8,8 +8,7 @@ ST-02
 <script src="/js/master/places/seat.js"></script>
 <%- contentFor('body') %>
 <form method="post">
-    <%- include('../../common/errorMessage') %>
-    <%- include('../../common/successMessage') %>
+    <%- include('../../common/messages') %>
 
     <%- include('form', { forms: forms, isNew: false }) %>
 </form>
