### Changed - オファー検索に利用可能アプリケーションを表示

--- a/views/offers/_dataTables.ejs
+++ b/views/offers/_dataTables.ejs
@@ -103,7 +103,7 @@
                             <th>有効性</th>
                             <th>アドオン</th>
                             <th>カタログ</th>
-                            <th>Apps</th>
+                            <th>アプリ</th>
                             <th>追加特性</th>
                         </tr>
                     </thead>
@@ -145,17 +145,17 @@
                             </td>
                             <td name="id__showCatalogs">
                                 <a href="javascript:void(0)" class="showCatalogs" data-id="$id$">
-                                    <span>表示</span>
+                                    表示
                                 </a>
                             </td>
-                            <td name="availableAtOrFromCount">
-                                <a href="javascript:void(0)" class="" data-id="$id$">
-                                    $availableAtOrFromCount$
+                            <td name="id__availableAtOrFromCount">
+                                <a href="javascript:void(0)" class="showAvailableAtOrFrom" data-id="$id$">
+                                    表示
                                 </a>
                             </td>
                             <td name="id__additionalProperty">
                                 <a href="javascript:void(0)" class="showAdditionalProperty" data-id="$id$">
-                                    <span>表示</span>
+                                    表示
                                 </a>
                             </td>
                             <td name="id__itemOffered.typeOf">
