--- a/views/reservations/_dataTables.ejs
+++ b/views/reservations/_dataTables.ejs
@@ -51,13 +51,7 @@
                             <label for="application" class="bmd-label-static">
                                 アプリケーション
                             </label>
-                            <select class="form-control" name="application">
-                                <option value="">選択</option>
-                                <% applications.forEach(function(application) { %>
-                                <option value="<%= application.id %>">
-                                    <%= application.name %>
-                                </option>
-                                <% }) %>
+                            <select class="form-control" name="application" id="application" style="width: 100%;">
                             </select>
                         </div>
                         <div class="form-group bmd-form-group col-md-2">
