--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -34,6 +34,12 @@
                             <span class="sidebar-normal">スクリーン</span>
                         </a>
                     </li>
+                    <li class="nav-item <%= (displayId === 'SRS-01') ? 'active': ''; %>">
+                        <a class="nav-link" href="/places/screeningRoomSection">
+                            <span class="sidebar-mini"><i class="material-icons">meeting_room</i></span>
+                            <span class="sidebar-normal">セクション</span>
+                        </a>
+                    </li>
                     <li class="nav-item <%= (displayId === 'ST-01') ? 'active': ''; %>">
                         <a class="nav-link" href="/places/seat">
                             <span class="sidebar-mini"><i class="material-icons">event_seat</i></span>
