--- a/views/places/screeningRoomSection/form.ejs
+++ b/views/places/screeningRoomSection/form.ejs
@@ -27,16 +27,14 @@
             <div class="tab-pane active show" id="link1">
                 <div class="form-row">
                     <div class="form-group bmd-form-group col-md-3">
-                        <label for="containedInPlace[branchCode]" class="bmd-label-static">
+                        <label for="containedInPlace[containedInPlace][branchCode]" class="bmd-label-static">
                             劇場
                         </label>
                         <% if (isNew) { %>
-                        <select class="form-control" name="containedInPlace[branchCode]">
+                        <select class="form-control" name="containedInPlace[containedInPlace][branchCode]">
                             <option value="">選択してください</option>
                             <% for (const movieTheater of movieTheaters) { %>
-                            <option value="<%= movieTheater.branchCode %>"
-                                <% if (forms.containedInPlace !== undefined && movieTheater.branchCode === forms.containedInPlace.branchCode) { %>
-                                selected<% } %>>
+                            <option value="<%= movieTheater.branchCode %>">
                                 <%= movieTheater.name.ja %>
                             </option>
                             <% } %>
@@ -45,16 +43,37 @@
                         <select class="form-control" disabled>
                             <% for (const movieTheater of movieTheaters) { %>
                             <option value="<%= movieTheater.branchCode %>"
-                                <% if (movieTheater.branchCode === forms.containedInPlace.branchCode) { %>
+                                <% if (movieTheater.branchCode === forms.containedInPlace.containedInPlace.branchCode) { %>
                                 selected<% } %>>
                                 <%= movieTheater.name.ja %>
                             </option>
                             <% } %>
                         </select>
-                        <input type="hidden" name="containedInPlace[branchCode]"
+                        <input type="hidden" name="containedInPlace[containedInPlace][branchCode]"
+                            value="<%= forms.containedInPlace.containedInPlace.branchCode %>">
+                        <% } %>
+                        <% if (errors && errors['containedInPlace.containedInPlace.branchCode']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['containedInPlace.containedInPlace.branchCode'].msg %>
+                        </span>
+                        <% } %>
+                    </div>
+
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="containedInPlace[branchCode]" class="bmd-label-static">
+                            スクリーン
+                        </label>
+                        <% if (isNew) { %>
+                        <input class="form-control" type="text" name="containedInPlace[branchCode]" value="">
+                        <% } else { %>
+                        <input readonly class="form-control" type="text" name="containedInPlace[branchCode]"
                             value="<%= forms.containedInPlace.branchCode %>">
                         <% } %>
-
+                        <% if (errors && errors['containedInPlace.branchCode']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['containedInPlace.branchCode'].msg %>
+                        </span>
+                        <% } %>
                     </div>
 
                     <div class="form-group bmd-form-group col-md-3">
@@ -63,8 +82,8 @@
                         </label>
                         <% if (isNew) { %>
                         <input type="text" class="form-control" name="branchCode" id="branchCode" placeholder=""
-                            maxlength=64 value="<%= forms.branchCode %>">
-                        <span class="bmd-help">半角64文字以内でご入力ください</span>
+                            maxlength=20 value="<%= forms.branchCode %>">
+                        <span class="bmd-help">半角20文字以内でご入力ください</span>
                         <% if (errors && errors.branchCode) { %>
                         <span class="bmd-help text-danger d-block">
                             <%- errors.branchCode.msg %>
@@ -74,7 +93,9 @@
                         <input disabled type="text" class="form-control" value="<%= forms.branchCode %>">
                         <input type="hidden" name="branchCode" value="<%= forms.branchCode %>">
                         <% } %>
+
                     </div>
+
                 </div>
 
                 <div class="form-group bmd-form-group">
@@ -83,7 +104,7 @@
                     </label>
                     <input class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64
                         value="<%= (forms.name !== undefined && forms.name !== null) ? forms.name.ja : '' %>">
-                    <span class="bmd-help">全角64文字以内でご入力ください</span>
+                    <span class="bmd-help">64文字以内でご入力ください</span>
                     <% if (errors && errors['name.ja']) { %>
                     <span class="bmd-help text-danger d-block">
                         <%- errors['name.ja'].msg %>
@@ -97,7 +118,7 @@
                     </label>
                     <input class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64
                         value="<%= (forms.name !== undefined && forms.name !== null) ? forms.name.en : '' %>">
-                    <span class="bmd-help">全角64文字以内でご入力ください</span>
+                    <span class="bmd-help">64文字以内でご入力ください</span>
                     <% if (errors && errors['name.en']) { %>
                     <span class="bmd-help text-danger d-block">
                         <%- errors['name.en'].msg %>
@@ -105,48 +126,6 @@
                     <% } %>
                 </div>
 
-                <div class="form-group bmd-form-group">
-                    <label for="address[ja]" class="bmd-label-static">
-                        アドレス
-                    </label>
-                    <input class="form-control" name="address[ja]" id="address[ja]" placeholder="" maxlength=64
-                        value="<%= (forms.address !== undefined && forms.address !== null) ? forms.address.ja : '' %>">
-                    <span class="bmd-help">全角64文字以内でご入力ください</span>
-                    <% if (errors && errors['address.ja']) { %>
-                    <span class="bmd-help text-danger d-block">
-                        <%- errors['address.ja'].msg %>
-                    </span>
-                    <% } %>
-                </div>
-
-                <div class="form-group">
-                    <label for="address[en]" class="bmd-label-static">
-                        アドレス(English)
-                    </label>
-                    <input class="form-control" name="address[en]" id="naaddressme[en]" placeholder="" maxlength=64
-                        value="<%= (forms.address !== undefined && forms.address !== null) ? forms.address.en : '' %>">
-                    <span class="bmd-help">全角64文字以内でご入力ください</span>
-                    <% if (errors && errors['address.en']) { %>
-                    <span class="bmd-help text-danger d-block">
-                        <%- errors['address.en'].msg %>
-                    </span>
-                    <% } %>
-                </div>
-
-                <div class="form-group bmd-form-group">
-                    <label for="" class="bmd-label-static">
-                        自由席対応
-                    </label>
-                    <div class="form-check form-check-inline">
-                        <label class="form-check-label">
-                            <input class="form-check-input" type="checkbox" <% if (forms.openSeatingAllowed) { %>
-                                checked="checked" <% } %> value="1" name="openSeatingAllowed">自由席対応
-                            <span class="form-check-sign">
-                                <span class="check"></span>
-                            </span>
-                        </label>
-                    </div>
-                </div>
             </div>
             <div class="tab-pane" id="link2">
                 <%- include('../../common/part/_additionalProperty', {
@@ -154,6 +133,7 @@
                 }) %>
             </div>
         </div>
+
     </div>
 </div>
 <!-- end card -->
