--- a/views/places/seat/form.ejs
+++ b/views/places/seat/form.ejs
@@ -4,6 +4,10 @@
             <!--        Here you can write extra buttons/actions for the toolbar              -->
             <a class="btn btn-primary btn-ok" href="javascript:void(0)">
                 <i class="material-icons">save</i> 保存</a>
+            <% if (!isNew) { %>
+            <a class="btn btn-delete btn-danger" href="javascript:void(0)" data-id="<%= req.params.id %>">
+                <i class="material-icons">delete</i> 削除</a>
+            <% } %>
         </div>
 
         <ul class="nav nav-pills nav-pills-dark mt-3" role="tablist">
@@ -22,17 +26,13 @@
         <div class="tab-content">
             <div class="tab-pane active show" id="link1">
                 <div class="form-row">
-                    <input type="hidden" name="containedInPlace[containedInPlace][branchCode]"
-                        value="<%= forms.containedInPlace.containedInPlace.branchCode %>">
-                    <input type="hidden" name="containedInPlace[branchCode]"
-                        value="<%= forms.containedInPlace.branchCode %>">
-
                     <div class="form-group bmd-form-group col-md-3">
                         <label for="containedInPlace[branchCode]" class="bmd-label-static">
                             劇場
                         </label>
                         <% if (isNew) { %>
-                        <select class="form-control" name="containedInPlace[branchCode]">
+                        <select class="form-control"
+                            name="containedInPlace[containedInPlace][containedInPlace][branchCode]">
                             <option value="">選択してください</option>
                             <% for (const movieTheater of movieTheaters) { %>
                             <option value="<%= movieTheater.branchCode %>">
@@ -52,6 +52,47 @@
                         </select>
                         <input type="hidden" name="containedInPlace[containedInPlace][containedInPlace][branchCode]"
                             value="<%= forms.containedInPlace.containedInPlace.containedInPlace.branchCode %>">
+                        <% } %>
+                        <% if (errors && errors['containedInPlace.containedInPlace.containedInPlace.branchCode']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['containedInPlace.containedInPlace.containedInPlace.branchCode'].msg %>
+                        </span>
+                        <% } %>
+                    </div>
+
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="containedInPlace[branchCode]" class="bmd-label-static">
+                            スクリーン
+                        </label>
+                        <% if (isNew) { %>
+                        <input class="form-control" type="text" name="containedInPlace[containedInPlace][branchCode]"
+                            value="">
+                        <% } else { %>
+                        <input readonly class="form-control" type="text"
+                            name="containedInPlace[containedInPlace][branchCode]"
+                            value="<%= forms.containedInPlace.containedInPlace.branchCode %>">
+                        <% } %>
+                        <% if (errors && errors['containedInPlace.containedInPlace.branchCode']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['containedInPlace.containedInPlace.branchCode'].msg %>
+                        </span>
+                        <% } %>
+                    </div>
+
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="containedInPlace[branchCode]" class="bmd-label-static">
+                            セクション
+                        </label>
+                        <% if (isNew) { %>
+                        <input class="form-control" type="text" name="containedInPlace[branchCode]" value="">
+                        <% } else { %>
+                        <input readonly class="form-control" type="text" name="containedInPlace[branchCode]"
+                            value="<%= forms.containedInPlace.branchCode %>">
+                        <% } %>
+                        <% if (errors && errors['containedInPlace.branchCode']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['containedInPlace.branchCode'].msg %>
+                        </span>
                         <% } %>
                     </div>
 
