--- a/views/places/screeningRoomSection/form.ejs
+++ b/views/places/screeningRoomSection/form.ejs
@@ -64,9 +64,13 @@
                             スクリーン
                         </label>
                         <% if (isNew) { %>
-                        <input class="form-control" type="text" name="containedInPlace[branchCode]" value="">
+                        <select class="form-control" name="containedInPlace[branchCode]" id="screenBranchCode"
+                            style="width: 100%;">
+                        </select>
                         <% } else { %>
-                        <input readonly class="form-control" type="text" name="containedInPlace[branchCode]"
+                        <input disabled class="form-control" type="text"
+                            value="<%= forms.containedInPlace.branchCode %> <%= forms.containedInPlace.name.ja %>">
+                        <input type="hidden" name="containedInPlace[branchCode]"
                             value="<%= forms.containedInPlace.branchCode %>">
                         <% } %>
                         <% if (errors && errors['containedInPlace.branchCode']) { %>
