--- a/views/places/screeningRoomSection/new.ejs
+++ b/views/places/screeningRoomSection/new.ejs
@@ -1,7 +1,7 @@
 <%- contentFor('title') %>
 スクリーンセクション作成
 <%- contentFor('displayId') %>
-ST-00
+SRS-00
 <%- contentFor('styles') %>
 
 <%- contentFor('scripts') %>
