--- a/views/places/screeningRoomSection/update.ejs
+++ b/views/places/screeningRoomSection/update.ejs
@@ -1,7 +1,7 @@
 <%- contentFor('title') %>
 スクリーンセクション編集
 <%- contentFor('displayId') %>
-ST-02
+SRS-02
 <%- contentFor('styles') %>
 
 <%- contentFor('scripts') %>
