--- a/views/places/screeningRoom/index.ejs
+++ b/views/places/screeningRoom/index.ejs
@@ -49,6 +49,13 @@ SR-01
                                     </label>
                                     <input class="form-control" name="branchCode[$regex]">
                                 </div>
+
+                                <div class="form-group bmd-form-group col-md-2">
+                                    <label for="name[$regex]" class="bmd-label-static">
+                                        名称
+                                    </label>
+                                    <input class="form-control" name="name[$regex]">
+                                </div>
                             </div>
                         </form>
                     </div>
@@ -61,8 +68,8 @@ SR-01
                             <thead class="text-primary">
                                 <tr>
                                     <th>コード</th>
-                                    <th>劇場</th>
                                     <th>名称</th>
+                                    <th>劇場</th>
                                     <th>アドレス</th>
                                     <th>自由席</th>
                                     <th>追加特性</th>
@@ -76,12 +83,10 @@ SR-01
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                         </a>
                                     </td>
+                                    <td name="name.ja|slice">$name.ja$</td>
                                     <td name="containedInPlace.branchCode__containedInPlace.name.ja|slice">
                                         <span class="font-italic text-muted">$containedInPlace.branchCode$</span>
                                         $containedInPlace.name.ja$
-                                    </td>
-                                    <td name="name.ja|slice">
-                                        $name.ja$
                                     </td>
                                     <td name="address.ja|slice">
                                         $address.ja$
