--- a/views/events/screeningEvent/edit.ejs
+++ b/views/events/screeningEvent/edit.ejs
@@ -28,6 +28,14 @@
                                     <select class="form-control" name="screen"></select>
                                 </div>
                                 <div class="form-group bmd-form-group col-md-4">
+                                    <label class="bmd-label-static" for="maximumAttendeeCapacity">キャパシティ
+                                        <a href="#" data-toggle="tooltip" title="最大収容人数を上書きできます">
+                                            <span class="material-icons" style="font-size: 1.2em;">
+                                                help
+                                            </span>
+                                        </a></label>
+                                    <input class="form-control" type="number" name="maximumAttendeeCapacity"
+                                        maxlength=10>
                                 </div>
                             </div>
 
