### Added - イベント固有のキャパシティ設定による在庫管理を実装

--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -59,7 +59,8 @@
                                 <div class="form-group bmd-form-group col-md-3">
                                     <label class="" for="maximumAttendeeCapacity">
                                         キャパシティ
-                                        <a href="#" data-toggle="tooltip" title="最大収容人数を上書きできます">
+                                        <a href="#" data-toggle="tooltip" title="最大収容人数を上書きできます"
+                                            style="pointer-events: auto;">
                                             <span class="material-icons" style="font-size: 1.2em;">
                                                 help
                                             </span>
