--- a/views/events/screeningEvent/edit.ejs
+++ b/views/events/screeningEvent/edit.ejs
@@ -29,11 +29,13 @@
                                 </div>
                                 <div class="form-group bmd-form-group col-md-4">
                                     <label class="bmd-label-static" for="maximumAttendeeCapacity">キャパシティ
-                                        <a href="#" data-toggle="tooltip" title="最大収容人数を上書きできます">
+                                        <a href="#" data-toggle="tooltip" title="最大収容人数を上書きできます"
+                                            style="pointer-events: auto;">
                                             <span class="material-icons" style="font-size: 1.2em;">
                                                 help
                                             </span>
-                                        </a></label>
+                                        </a>
+                                    </label>
                                     <input class="form-control" type="number" name="maximumAttendeeCapacity"
                                         maxlength=10>
                                 </div>
